Added bio page.

--- a/markup/bio.html
+++ b/markup/bio.html
@@ -45,37 +45,37 @@
       </div> <!-- /.container -->
     </nav>
 
-    <div id="page" class="container-fluid" role="main">
+    <div id="bio" class="container-fluid" role="main">
 
-      <!-- BEGIN EVENT/NEWS PAGE CONTENT -->
-
-      <header>
-        <div class="img-container">
-          <div class="header-overlay"></div>
-          <img class="header-image" src="static/img/drones.jpg" />
-          <div class="container header-text">
-            <h1 class="header-title">Page Title</h1>
-            <h3 class="header-sub">Description subtitle text.</h3>
-          </div>
-        </div>
-      </header>
+      <!-- BEGIN BIO PAGE CONTENT -->
 
       <section class="container page-container">
-        <h2>Header Text</h2>
+        <div id="bio-header">
 
-        <p>Some paragraph text <a href="#">with a link</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius iaculis mauris, sed rutrum arcu scelerisque nec. Nulla facilisi. Nullam vulputate, velit sed bibendum accumsan, erat nisl ornare enim, ac sollicitudin ex nibh in dolor. Nulla lobortis blandit nulla et dignissim. Curabitur a ex tempor, feugiat leo mattis, ultricies eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus vulputate dui tortor, sit amet malesuada arcu aliquam nec. Vivamus consectetur convallis libero, ac feugiat odio imperdiet volutpat.</p>
+          <div class="bio-img-container"><img class="bio-img" src="static/img/braden.jpg" /></div>
 
-        <h3>Sub-Header Text</h3>
+          <div class="bio-title">
+            <h1 class="bio-name">Braden Croy</h1>
+            <h3 class="bio-sub">Director</h3>
+          </div>
 
-        <ul>
-          <li>List Item 1</li>
-          <li>List Item 2</li>
-          <li>List Item 3</li>
-          <li>List Item 4</li>
-        </ul>
+        </div>
+
+        <div class="bio-text">
+          <p>Some paragraph text <a href="#">with a link</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius iaculis mauris, sed rutrum arcu scelerisque nec. Nulla facilisi. Nullam vulputate, velit sed bibendum accumsan, erat nisl ornare enim, ac sollicitudin ex nibh in dolor. Nulla lobortis blandit nulla et dignissim. Curabitur a ex tempor, feugiat leo mattis, ultricies eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus vulputate dui tortor, sit amet malesuada arcu aliquam nec. Vivamus consectetur convallis libero, ac feugiat odio imperdiet volutpat.</p>
+
+          <h3>Sub-Header Text</h3>
+
+          <ul>
+            <li>List Item 1</li>
+            <li>List Item 2</li>
+            <li>List Item 3</li>
+            <li>List Item 4</li>
+          </ul>
+        </div>
       </section>
 
-      <!-- END EVENT/NEWS PAGE CONTENT -->
+      <!-- END BIO PAGE CONTENT -->
 
       <footer>
         <img src="static/img/nexislogo_outline.png" alt="NEXIS Logo" />
